use expressions package instead of math_expressions fix inverse functions

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   math_expressions: ^1.0.0
+  expressions: ^0.1.2
 
 dev_dependencies:
   flutter_test:
